--- a/src/app/typography/typography.component.html
+++ b/src/app/typography/typography.component.html
@@ -4,9 +4,10 @@
 
 }
 
+<p></p>
 
 <div class="line-container">
-    <div class="line-text"> Zákazník </div>
+    <div class="line-text"> Customer </div>
 </div>
 <p>
 
