--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
 <div [ngClass]="themeService.themeSignal()" class="full-height">
     <mat-tab-group>
-        <mat-tab label="Theme switch control">
-            <div class="tab-content">
-                <app-theme-switch label="Theme" />
-            </div>
-        </mat-tab>
         <mat-tab label="Form sample based on json definition">
             <div class="tab-content">
                 <app-form-sample></app-form-sample>
             </div>
 
         </mat-tab>
-        <mat-tab label="Typography">
+        <mat-tab label="Theme switch control">
+            <div class="tab-content">
+                <app-theme-switch label="Theme" />
+            </div>
+        </mat-tab>
+        <mat-tab label="Typography cheatsheet">
             <div class="tab-content">
                 <app-typography></app-typography>
             </div>
