--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,9 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+.app-container {
+    max-width: 800px; /* Nastavte šírku aplikácie */
+    margin: 0 auto; /* Umiestnite na stred displeja */
 
-
+}
 
