--- a/src/app/form-flow/form-flow.scss
+++ b/src/app/form-flow/form-flow.scss
@@ -23,6 +23,10 @@ $showColors: false;
     text-align: end;
 }
 
+.ff-date {
+    color: dimgray;
+}
+
 .quarter {
     grid-column: span 3;
     @if ($showColors) {
