--- a/src/app/form-sample/form-sample.component.html
+++ b/src/app/form-sample/form-sample.component.html
@@ -23,10 +23,10 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card-actions>
+  <div class="ff-row ff-space-around">
     <button mat-raised-button (click)="enable(true)">Enable</button>
     <button mat-raised-button (click)="enable(false)">Disable</button>
-  </mat-card-actions>
+  </div>
 
 </form>
 
