--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -1,57 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
-@use "@angular/material" as mat;
+@use '@angular/material' as mat;
+@use '@angular/material-experimental' as matx;
 
-// Light Theme
-$light-theme-primary: mat.define-palette(mat.$indigo-palette);
-$light-theme-accent: mat.define-palette(mat.$purple-palette, A200, A100, A400);
-$light-theme-warn: mat.define-palette(mat.$red-palette);
+// $m3-red-palette
+// $m3-green-palette
+// $m3-blue-palette
+// $m3-yellow-palette
+// $m3-cyan-palette
+// $m3-magenta-palette
+// $m3-orange-palette
+// $m3-chartreuse-palette
+// $m3-azure-palette
+// $m3-violet-palette
+// $m3-rose-palette
 
-$light-theme: mat.define-light-theme(
-    (
-        color: (
-            primary: $light-theme-primary,
-            accent: $light-theme-accent,
-            warn: $light-theme-warn
-        ),
-        typography: mat.define-typography-config()
-    )
-);
+$theme: matx.define-theme((
+  color: (
+    theme-type: light,
+    primary: matx.$m3-azure-palette,
+    tertiary: matx.$m3-blue-palette,
+  )
+));
 
-// Dark Theme
-$dark-theme-primary: mat.define-palette(mat.$indigo-palette);
-$dark-theme-accent: mat.define-palette(mat.$purple-palette, A200, A100, A400);
-$dark-theme-warn: mat.define-palette(mat.$red-palette);
+@include mat.core();
+@include matx.color-variants-back-compat($theme);
 
-$dark-theme: mat.define-dark-theme(
-    (
-        color: (
-            primary: $dark-theme-primary,
-            accent: $dark-theme-accent,
-            warn: $dark-theme-warn
-        ),
-        typography: mat.define-typography-config()
-    )
-);
-
-// Dark theme variables
-$dark-bg-color: #222;
-$semi-dark-bg-color: #333;
-$light-text-color: #cacaca;
-
-// Light theme variables
-$light-bg-color: #d2d2d2;
-$semi-light-bg-color: #c0c0c0;
-$dark-text-color: #333;
-
-// Dark mode
-.dark {
-    @include mat.all-component-colors($dark-theme);
-
-    background-color: $semi-dark-bg-color;
-    color: $light-text-color;
-}
-
-// Light mode
-.light {
-    @include mat.all-component-themes($light-theme);
+:root {
+  @include mat.all-component-themes($theme);
 }
