--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <div [ngClass]="themeService.themeSignal()" class="full-height"> -->
-    <div class="light" class="full-height">
+<div class="full-height">
     <mat-tab-group>
         <mat-tab label="Form sample based on json definition">
             <div class="tab-content">
@@ -10,6 +10,7 @@
         <mat-tab label="Theme switch control">
             <div class="tab-content">
                 <app-theme-switch label="Theme" />
+                
             </div>
         </mat-tab>
         <mat-tab label="Typography cheatsheet">
