--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -1,5 +1,5 @@
-@use '@angular/material' as mat;
-@use '@angular/material-experimental' as matx;
+@use "@angular/material" as mat;
+@use "@angular/material-experimental" as matx;
 
 // $m3-red-palette
 // $m3-green-palette
@@ -13,17 +13,58 @@
 // $m3-violet-palette
 // $m3-rose-palette
 
-$theme: matx.define-theme((
-  color: (
-    theme-type: light,
-    primary: matx.$m3-azure-palette,
-    tertiary: matx.$m3-blue-palette,
+$my-typography: mat.define-typography-config();
+$light: matx.define-theme(
+  (
+    color: (
+      theme-type: light,
+      primary: matx.$m3-orange-palette,
+      tertiary: matx.$m3-blue-palette
+    ),
+    typography: (
+      brand-family: 'Comic Sans',
+      bold-weight: 900
+    ),
+    density: (
+      scale: -1
+    )
+    
   )
-));
+);
+
+
+$dark: matx.define-theme(
+  (
+    color: (
+      theme-type: dark,
+      primary: matx.$m3-orange-palette,
+      tertiary: matx.$m3-blue-palette
+    ),
+    typography: (
+      brand-family: 'Comic Sans',
+      bold-weight: 900
+    ),
+    density: (
+      scale: -1
+    )
+    
+  )
+);
 
 @include mat.core();
-@include matx.color-variants-back-compat($theme);
+@include matx.color-variants-back-compat($light);
 
-:root {
-  @include mat.all-component-themes($theme);
+.dark {
+  @include mat.core();
+  @include matx.color-variants-back-compat($dark);
+  }
+
+
+
+html {
+  // Apply the base theme at the root, so it will be inherited by the whole app.
+  @include mat.all-component-themes($light);
 }
+// :root {
+//   @include mat.all-component-themes($theme);
+// }
