--- a/src/app/form-sample/form-sample.component.html
+++ b/src/app/form-sample/form-sample.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="mat-elevation-z6">
-  <span>title</span>
+  <span class="mat-mdc-card-title">title</span>
 </mat-toolbar>
 <form [formGroup]="formGroup" novalidate (ngSubmit)="onSubmit()">
 
