--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- <div [ngClass]="themeService.themeSignal()" class="full-height"> -->
 <div class="full-height">
+<!-- <div class="full-height"> -->
     <mat-tab-group>
         <mat-tab label="Form sample based on json definition">
             <div class="tab-content">
