--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="full-height">
+<div class="main-container">
 <!-- <div class="full-height"> -->
     <mat-tab-group>
         <mat-tab label="Form sample based on json definition">
