--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -1,16 +1,18 @@
-@use '@angular/material' as mat;
-@use '@angular/material-experimental' as matx;
+@use "@angular/material" as mat;
+@use "@angular/material-experimental" as matx;
 
-$light-theme: matx.define-theme((
-  color: (
-    theme-type: light,
-    primary: matx.$m3-green-palette,
-    tertiary: matx.$m3-blue-palette,
-  ),
-  density: (
-    scale: -1
+$light-theme: matx.define-theme(
+  (
+    color: (
+      theme-type: light,
+      primary: matx.$m3-green-palette,
+      tertiary: matx.$m3-blue-palette
+    ),
+    density: (
+      scale: -1
+    )
   )
-));
+);
 
 @include mat.core();
 @include matx.color-variants-back-compat($light-theme);
@@ -19,9 +21,6 @@ $light-theme: matx.define-theme((
   @include mat.all-component-themes($light-theme);
 }
 
-body {
-  max-width: 800px;
-}
 
 // $m3-red-palette
 // $m3-green-palette
