--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -5,7 +5,7 @@ $light-theme: matx.define-theme(
   (
     color: (
       theme-type: light,
-      primary: matx.$m3-green-palette,
+      primary: matx.$m3-azure-palette,
       tertiary: matx.$m3-blue-palette
     ),
     density: (
