--- a/src/app/form-sample/form-sample.component.html
+++ b/src/app/form-sample/form-sample.component.html
@@ -9,7 +9,7 @@
         <mat-card-subtitle>Shipping Information</mat-card-subtitle>
       </mat-card-header>
 
-      <app-form-flow-content [formGroup]="formGroup" [controls]="controls1" />
+      <app-form-flow-content [formGroup]="formGroup" [controls]="controls1" [editMode]="editMode" />
 
     </mat-card-content>
   </mat-card>
@@ -21,7 +21,7 @@
         <mat-card-subtitle>Car info</mat-card-subtitle>
       </mat-card-header>
 
-      <app-form-flow-content [formGroup]="formGroup" [controls]="controls2" />
+      <app-form-flow-content [formGroup]="formGroup" [controls]="controls2" [editMode]="editMode" />
 
     </mat-card-content>
   </mat-card>
@@ -29,10 +29,16 @@
   <div class="ff-row ff-space-around">
     <button mat-flat-button (click)="enable(true)">Enable</button>
     <button mat-raised-button (click)="enable(false)">Disable</button>
+
+
+    <mat-checkbox [(ngModel)]="editMode" [ngModelOptions]="{standalone: true}">Edit mode</mat-checkbox>
   </div>
 
 </form>
 
+<pre>
+  {{editMode | json}}
+</pre>
 
 <pre>
   {{formGroup.value | json}}
@@ -42,3 +48,6 @@
 <pre>
   {{controls1 | json}}
 </pre>
+
+
+<app-form-flow-control-editor [controlData]="editedControl"></app-form-flow-control-editor>
