--- a/src/app/form-flow-control-editor/form-flow-control-editor.component.html
+++ b/src/app/form-flow-control-editor/form-flow-control-editor.component.html
@@ -1,7 +1,14 @@
-<pre>
+<!-- <pre>
     {{controlData | json}}
-</pre>
+</pre> -->
 
 @if(formGroup){
 <app-form-flow-content [formGroup]="formGroup" [controls]="edControls" />
+
+<div class="ff-row ff-space-around">
+    <button mat-flat-button (click)="save(false)">Cancel</button>
+    <button mat-raised-button (click)="save(true)">Save</button>
+
+
+  </div>
 }
