--- a/src/app/form-flow/form-flow-content.component.html
+++ b/src/app/form-flow/form-flow-content.component.html
@@ -1,6 +1,3 @@
-@if(editMode){
-<button>editMode</button>
-}
 <div class="ff-container" [formGroup]="formGroup">
   @for (ctl of controls; track $index) {
 
@@ -9,9 +6,22 @@
   <!-- appearance: 'fill' | 'outline' -->
   <mat-form-field [ngClass]="ctl.flex" floatLabel="always" appearance="fill" subscriptSizing="fixed">
     @if(ctl.label){
-    <mat-label>{{ctl.label}}</mat-label>
-    }
+    <mat-label>{{ctl.label}}
+      @if(editMode){
+      <button cdkOverlayOrigin #trigger="cdkOverlayOrigin"
+        (click)="editCtrl(ctl);isEditOpen = !isEditOpen;$event.stopPropagation()">Edit</button>
 
+      <ng-template cdkConnectedOverlay [cdkConnectedOverlayOrigin]="trigger" [cdkConnectedOverlayOpen]="isEditOpen">
+        @if(editedControl && ctl === editedControl){
+        <div class="example-list">
+          <app-form-flow-control-editor [controlData]="editedControl"></app-form-flow-control-editor>
+        </div>
+        }
+      </ng-template>
+      }
+    </mat-label>
+
+    }
     @switch(ctl.type){
     @case('textarea') {<textarea matInput [formControlName]="ctl.name"></textarea>}
     @case('select') {
@@ -79,11 +89,8 @@
     <mat-error>{{ctl.label}} musí mať najviac {{ctl.maxLength}} znakov</mat-error>
     }
 
-    @if(editMode){
-    <button matSuffix mat-icon-button (click)="editCtrl(ctl);$event.stopPropagation()">
-      <mat-icon aria-label="label">edit</mat-icon>
-    </button>
-    }
+
+
 
   </mat-form-field>
   }
@@ -102,8 +109,3 @@
   </pre> -->
   }
 </div>
-
-@if(editedControl){
-<app-form-flow-control-editor [controlData]="editedControl"></app-form-flow-control-editor>
-
-}
