--- a/src/app/form-flow/form-flow-content.component.css
+++ b/src/app/form-flow/form-flow-content.component.css
@@ -9,8 +9,8 @@
   }
 
   .edit-control{
-    background-color: bisque;
-    border: 1px solid goldenrod;
+    background-color: azure;
+    border: 1px solid cyan;
     height: 76px;
   }
 
