--- a/src/app/form-flow/form-flow-content.component.html
+++ b/src/app/form-flow/form-flow-content.component.html
@@ -34,7 +34,7 @@
 
 
       </div>
-      <div class="ff-row ff-space-between">
+      <div class="ff-row ff-space-between" style="margin: 3px;">
         <button (click)="move(ctl, 'left')">&lt;=</button>
         <button (click)="move(ctl, 'smaller')">-</button>
         <button (click)="move(ctl, 'bigger')">+</button>
