--- a/src/app/form-flow/form-flow.scss
+++ b/src/app/form-flow/form-flow.scss
@@ -18,6 +18,10 @@ $showColors: false;
     flex-direction: row;
 }
 
+.ff-gap-1em {
+    gap: 1em;
+}
+
 .ff-space-between {
     justify-content: space-between;
 }
