--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,11 @@
                 <app-buttons></app-buttons>
             </div>
         </mat-tab>
+        <mat-tab label="Overlay test">
+            <div class="tab-content">
+                <app-overlay-test></app-overlay-test>
+            </div>
+        </mat-tab>
     </mat-tab-group>
 
 
