--- a/src/app/form-flow/form-flow-content.component.html
+++ b/src/app/form-flow/form-flow-content.component.html
@@ -1,3 +1,26 @@
+@if(editMode){
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      JSON
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+  <div class="ff-col">
+    <div class="ff-row ff-space-between">
+      <div></div>
+      <div>
+        <mat-icon matTooltip="Copy to clipboard" (click)="copyToClipboard()">content_copy</mat-icon>
+
+      </div>
+
+    </div>
+    <div>
+      <pre>{{controls | json}}</pre>
+
+    </div>
+  </div>
+</mat-expansion-panel>
+}
 <div class="ff-container" [formGroup]="formGroup">
   @for (ctl of controls; track $index) {
 
@@ -21,17 +44,16 @@
           {{ctl.type}}
         </div>
 
-        <mat-icon cdkOverlayOrigin #trigger="cdkOverlayOrigin"
+        <mat-icon matTooltip="Edit control properties" cdkOverlayOrigin #trigger="cdkOverlayOrigin"
           (click)="editCtrl(ctl);$event.stopPropagation()">
           edit
         </mat-icon>
 
-        <ng-template cdkConnectedOverlay 
-        [cdkConnectedOverlayOrigin]="trigger" 
-        [cdkConnectedOverlayOpen]="isEditOpen">
+        <ng-template cdkConnectedOverlay [cdkConnectedOverlayOrigin]="trigger" [cdkConnectedOverlayOpen]="isEditOpen">
           @if(editedControl && ctl === editedControl){
           <div class="editor">
-            <app-form-flow-control-editor [controlData]="editedControl" (onClose)="closeEditOverlay($event)"></app-form-flow-control-editor>
+            <app-form-flow-control-editor [controlData]="editedControl"
+              (onClose)="closeEditOverlay($event)"></app-form-flow-control-editor>
           </div>
           }
         </ng-template>
@@ -39,10 +61,15 @@
 
       </div>
       <div class="ff-row ff-gap-1em" style="margin: 3px;">
-        <mat-icon (click)="move(ctl, 'left')">arrow_back</mat-icon>
-        <mat-icon (click)="move(ctl, 'smaller')">remove_circle_outline</mat-icon>
-        <mat-icon (click)="move(ctl, 'bigger')">add_circle_outline</mat-icon>
-        <mat-icon (click)="move(ctl, 'right')">arrow_forward</mat-icon>
+        <mat-icon (click)="move(ctl, 'left')" matTooltip="Move left">arrow_back</mat-icon>
+        <mat-icon (click)="move(ctl, 'smaller')" matTooltip="Make smaller">remove_circle_outline</mat-icon>
+        <mat-icon (click)="move(ctl, 'bigger')" matTooltip="Move bigger">add_circle_outline</mat-icon>
+        <mat-icon (click)="move(ctl, 'right')" matTooltip="Move right">arrow_forward</mat-icon>
+        <mat-icon (click)="ctl.isRequired = !ctl.isRequired" matTooltip="Set required">{{ctl.isRequired ?
+          'radio_button_checked' :
+          'radio_button_unchecked'}}</mat-icon>
+
+
 
       </div>
     </div>
@@ -90,6 +117,19 @@
       <mat-slide-toggle hideIcon="false" [formControlName]="ctl.name" [required]="ctl.isRequired"></mat-slide-toggle>
 
 
+    </div>
+    }
+
+    @case('radio') {
+    <div class="ff-row">
+      <input matInput readonly="true" [disabled]="formGroup.get(ctl.name)?.disabled" class="width0">
+
+      <mat-radio-group [formControlName]="ctl.name" [required]="ctl.isRequired" class="ff-row ff-space-between radio-group">
+        @for (item of ctl.values; track item) {
+
+        <mat-radio-button style="flex: 1;" [value]="item.key">{{ item.label }}</mat-radio-button>
+        }
+      </mat-radio-group>
     </div>
     }
 
