--- a/src/app/form-flow/form-flow-content.component.html
+++ b/src/app/form-flow/form-flow-content.component.html
@@ -54,7 +54,7 @@
       <div class="ff-row ff-gap-1em" style="margin: 3px;">
         <mat-icon (click)="move(ctl, 'left')" matTooltip="Move left">arrow_back</mat-icon>
         <mat-icon (click)="move(ctl, 'smaller')" matTooltip="Make smaller">remove_circle_outline</mat-icon>
-        <mat-icon (click)="move(ctl, 'bigger')" matTooltip="Move bigger">add_circle_outline</mat-icon>
+        <mat-icon (click)="move(ctl, 'bigger')" matTooltip="Make bigger">add_circle_outline</mat-icon>
         <mat-icon (click)="move(ctl, 'right')" matTooltip="Move right">arrow_forward</mat-icon>
         <mat-icon (click)="ctl.isRequired = !ctl.isRequired" matTooltip="Set required">{{ctl.isRequired ?
           'radio_button_checked' :
@@ -70,8 +70,7 @@
   @if(!ctl.isNonMatFormField){
 
   <!-- appearance: 'fill' | 'outline' -->
-  <mat-form-field [ngClass]="ctl.flex" class="example-box" floatLabel="always" appearance="outline"
-    subscriptSizing="dynamic">
+  <mat-form-field [ngClass]="ctl.flex" floatLabel="always" [appearance]="appearance" subscriptSizing="dynamic">
     @if(ctl.label){
     <mat-label>{{ctl.label}}</mat-label>
 
@@ -96,18 +95,12 @@
       <mat-datepicker #datePicker></mat-datepicker>
     </div>
     }
-    @case('space') {
-    <input matInput style="display: none;" readonly="true">
-    }
 
     @case('checkbox') {
     <div class="ff-row">
       <input matInput readonly="true" [disabled]="formGroup.get(ctl.name)?.disabled">
-
-      <!-- <mat-checkbox [formControlName]="ctl.name"></mat-checkbox> -->
-      <mat-slide-toggle hideIcon="false" [formControlName]="ctl.name" [required]="ctl.isRequired"></mat-slide-toggle>
-
-
+      <mat-checkbox [formControlName]="ctl.name"></mat-checkbox>
+      <!-- <mat-slide-toggle hideIcon="false" [formControlName]="ctl.name" [required]="ctl.isRequired"></mat-slide-toggle> -->
     </div>
     }
 
@@ -124,7 +117,6 @@
       </mat-radio-group>
     </div>
     }
-
 
     @default {
     <input matInput [formControlName]="ctl.name">}
@@ -168,6 +160,14 @@
   @case('space') {
   <div [ngClass]="ctl.flex"></div>
   }
+
+  @case('divider') {
+    
+    <mat-divider [ngClass]="ctl.flex"></mat-divider>
+    }
+  
+
+
   }
   }
 
