selection, add, remove

--- a/src/app/form-flow/form-flow-content.component.css
+++ b/src/app/form-flow/form-flow-content.component.css
@@ -72,3 +72,11 @@
 .ff-name {
   font-weight: bolder;
 }
+
+.editedControl {
+  background-color: lightblue;
+}
+
+.ctl-type {
+  border-bottom: 2px solid navy;
+}
